# skimgpt

./: .gitignore  BIO_PROCESS_cleaned.txt  Dockerfile  Dockerfile.base  Dockerfile.upgrade  EDA.ipynb  Fine_Tuning_with_LoRa.ipynb  LICENSE  Lora Fine Tuning.ipynb  MANIFEST.in  README.md  RMS_tunnel.txt  Sequential_Guidance_vs_Batched_Outlines_Inference.ipynb  SetFit Training.ipynb  Unsloth_Gemma_Fine_Tuning.ipynb  Unsloth_Llama3_Fine_Tuning.ipynb  Unsloth_Lora_Fine_Tuning.ipynb  Unsloth_Phi3_Fine_Tuning-Sweep.ipynb  Unsloth_Phi3_Fine_Tuning.ipynb  VISUALIZATION_GUIDE.md  __init__.py  abstract_comprehension.py  bigger_bt_train.tsv  build_and_publish.sh  chain_of_thought.tsv  config.json  configRMS_needSpecialTunnel.json  config_template.json  cot.tsv  cot_test0.tsv  cot_test1.tsv  cot_test10.tsv  cot_test2.tsv  cot_test3.tsv  cot_test4.tsv  cot_test5.tsv  cot_test6.tsv  cot_test7.tsv  cot_test8.tsv  cot_test9.tsv  (+61 more)
.github/workflows/: main.yml  release.yml
.ipynb_checkpoints/: Fine_Tuning_with_LoRa-checkpoint.ipynb  Lora Fine Tuning-checkpoint.ipynb  SetFit Training-checkpoint.ipynb  Unsloth_Gemma_Fine_Tuning-checkpoint.ipynb  Unsloth_Llama3_Fine_Tuning-checkpoint.ipynb  Unsloth_Lora_Fine_Tuning-checkpoint.ipynb  Unsloth_Phi3_Fine_Tuning-Sweep-checkpoint.ipynb  Unsloth_Phi3_Fine_Tuning-checkpoint.ipynb  config-checkpoint.json
data/: bigger_train.tsv  even_bigger_bt_train.tsv  filtered_synthetic_train.tsv  mini_test.tsv  test.tsv
data/.ipynb_checkpoints/: midbigger_train-checkpoint.tsv  train-checkpoint.tsv
data/Porpoise_1/: bigger_filtered_synthetic_bt_train.tsv  bigger_filtered_synthetic_train.tsv  bigger_mixed_train.tsv  bigger_same_dist_test.tsv  bigger_same_dist_train.tsv  correct_total_train_cot.tsv  mixed_dist_train.tsv  right_dist_train.tsv  same_dist_test.tsv  same_dist_train.tsv  same_dist_train_bt.tsv  synthetic_train.tsv  train.tsv
data/Porpoise_2/: support_data.tsv  test.tsv  train.tsv
exampleConfigs/: configPosition.json  configSkim.json  configWarfarin.json  configWarfarinAmpDrug.json  configWarfarinNoSuffix.json
guidance/: _model.py
input_lists/: GAMM_cell_types.txt  HGNC_genesWithSynonyms2023_vocab_out.txt  RonsDrugsATerms.txt  RonsDrugsBTerms.txt  c_term_test.txt  ddi_a_terms.txt  ddi_b_terms.txt  ddi_b_termsVsWarfarin.txt  genesWithAtLeast1HitCommonWordsAndShortWordsRemoved.txt  genes_no_syn.txt  goodRX_a_terms.txt  goodRX_a_termsPlusRandom.txt  goodRX_a_termsShort.txt  goodRX_b_terms.txt  goodRX_b_termsPlusRandom.txt  goodRX_b_termsShort.txt  hyp_test.txt  leo.txt  mapk_set_analysis.csv  pathway_gene.tsv  results.tsv  test_list.txt
input_lists/exercise3/: skim_a.txt  skim_b.txt  skim_c.txt
input_lists/exercise4/: A_term.txt  B_term.txt  C_term.txt
input_lists/exercise5/: manip.py  skim_a.txt  skim_b.txt  skim_c.txt  skim_paper_table1_queries.csv
input_lists/figure2/: skim_a.txt  skim_b.txt  skim_c.txt
input_lists/table2/: b_terms.txt  c_terms.txt
input_lists/test/: km_a.txt  km_b.txt  skim_a.txt  skim_b.txt  skim_c.txt
output/output_20240208173059/: config.json
output/output_20240208173127/: config.json
output/output_20240208173209/: config.json
output/output_20240208173242/: config.json
output/output_20240208173250/: attention_deficit_hyperactivity_disorder_km_with_gpt.json  config.json  km_with_gpt_attention_deficit_hyperactivity_disorder_output_filtered.tsv
output/output_20240208173615/: attention_deficit_hyperactivity_disorder_km_with_gpt.json  config.json  km_with_gpt_attention deficit hyperactivity disorder_output.tsv  km_with_gpt_attention_deficit_hyperactivity_disorder_output_filtered.tsv
paper/: PPI_abstracts.csv  abstract_generator.py  figure2.py  figure3.py  figure4.py  protein_cooccurrence_abstracts.csv  relevance_filter_misclassifications.csv
paper/post-rel-results/: postrel_human_variance_comparison_A_B_C.csv  postrel_human_variance_comparison_A_C.csv
paper/pre-rel-results/: prerel_human_variance_comparison_A_B_C.csv  prerel_human_variance_comparison_A_C.csv
porpoise/evals/: eval.ipynb  results.csv  results_protein.csv
porpoise/training/: Porpoise_Fine_Tuning.ipynb  (+2 more)
relevance_tests/: test6.tsv  test9.tsv
skimgpt/: __init__.py  classifier.py  cost_estimator.py  eval_JSON_results.py  htcondor_helper.py  main.py  prompt_library.py  pubmed_fetcher.py  relevance_chtc.py  relevance_helper.py  relevance_triton.py  retry.py  skim_and_km_api.py  triton_client.py  utils.py
src/: AC.ipynb  __init__.py  abstract_comprehension.py  atomic_chtc.py  b_terms.txt  c_terms.txt  check_abstract_consistency.py  chtc.py  classifier.py  cost_estimator.py  cot.tsv  eval.ipynb  eval.py  eval.sh  eval_JSON_results.py  exercises.py  fetch.ipynb  few_shot_library.py  files.txt  filtered.tsv  full_text_chunker.py  get_pubmed_text.py  htcondor_helper.py  hyp_filter.ipynb  image_analyzer.py  jobs.py  leakage.csv  leakage.py  main.py  one_million.ipynb  openwebui_client.py  plot_output_w_truth.py  pmc_fulltext_fetcher.py  production_ish_tests.py  prompt_library.py  pubmed_fetcher.py  relevance.py  relevance_chtc.py  relevance_helper.py  relevance_triton.py  (+13 more)
test/: test.json  test_abstract_comprehension.py  test_b_terms.txt  test_config.json
test_tsvs/: test0.tsv  test3.tsv  test4.tsv  test6.tsv  test7.tsv
testing/: .bash_history  fetch.ipynb  hello-world.sh  hello-world.sub
tests/: README.md  pdf_test_results.json  test_dch_validator.py  test_enriched_fulltext.py  test_iteration_parallelism.py  test_openwebui_client.py  test_pdf_availability.py  test_skim_abc_validator.py  test_streaming_pipeline.py  verify_figure_integration.py  verify_full_text.py
tools/: bench_triton.py  integration_test.py
webapp/: app.py  run.json
(+1006 files in other folders)
