[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "skimgpt"
dynamic = ["version"]
description = "Biomedical Knowledge Mining with co-occurrence modeling and LLMs"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ron Stewart", email = "rstewart@morgridge.org"},
    {name = "Rob Millikin", email = "rmillikin@morgridge.org"},
    {name = "Kevin George", email = "kshinegeorge@morgridge.org"},
    {name = "Jack Freeman", email = "jfreeman@morgridge.org"}
]
maintainers = [
    {name = "Ron Stewart", email = "rstewart@morgridge.org"},
    {name = "Rob Millikin", email = "rmillikin@morgridge.org"},
    {name = "Kevin George", email = "kshinegeorge@morgridge.org"},
    {name = "Jack Freeman", email = "jfreeman@morgridge.org"}
]
keywords = ["biomedical", "nlp", "co-occurrence", "knowledge-mining", "LLMs", "literature-analysis", "skim"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "openai>=1.0.0",
    "biopython>=1.79",
    "requests>=2.25.0",
    "tiktoken>=0.7.0",
    "torch>=2.11.0",
]

[project.optional-dependencies]
gpu = [
    "vllm>=0.6.0",
    "htcondor>=24.6.1",
]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.910",
    "build>=0.7.0",
    "twine>=3.4.0",
]
viz = [
    "matplotlib>=3.5.0",
    "cmdlogtime",
    "scipy>=1.7.0",
    "statsmodels>=0.13.0",
]

[project.urls]
Homepage = "https://github.com/stewart-lab/skimgpt"
Repository = "https://github.com/stewart-lab/skimgpt.git"
Documentation = "https://github.com/stewart-lab/skimgpt#readme"
"Bug Tracker" = "https://github.com/stewart-lab/skimgpt/issues"

[project.scripts]
skimgpt-relevance = "skimgpt.relevance_triton:main"
skimgpt-main = "skimgpt.main:main"
skimgpt-hyp-stats = "skimgpt.visualization.hyp_stats:main"
skimgpt-plot-hyp-stats = "skimgpt.visualization.plot_hyp_stats:main"
skimgpt-bayesian-ci = "skimgpt.visualization.bayesian_ci:main"
skimgpt-plot-runs = "skimgpt.visualization.plot_separate_runs:main"

[tool.setuptools]
packages = ["skimgpt", "skimgpt.visualization"]
include-package-data = true

[tool.setuptools.package-data]
skimgpt = ["*.py", "*.sh"]
"skimgpt.visualization" = ["*.txt", "example_data/**/*"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
fallback_version = "2.0.0"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true